Fix dashboard icons colour & opacity (Windows High Contrast)
- fixes #7325

--- a/wagtail/admin/static_src/wagtailadmin/scss/layouts/home.scss
+++ b/wagtail/admin/static_src/wagtailadmin/scss/layouts/home.scss
@@ -66,6 +66,12 @@ header {
             @include media-breakpoint-down(xs) {
                 font-size: 4em;
             }
+
+            // Media for Windows High Contrast Mode
+            @media (forced-colors: $media-forced-colours) {
+                color: $system-color-link-text;
+                opacity: 1;
+            }
         }
 
         a {
